<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.kumuluz.ee.security</groupId>
    <artifactId>kumuluzee-security</artifactId>
    <version>1.3.0-SNAPSHOT</version>
    <modules>
        <module>common</module>
        <module>keycloak</module>
        <module>firebase</module>
    </modules>
    <packaging>pom</packaging>

    <name>KumuluzEE Security</name>

    <inceptionYear>2017</inceptionYear>
    <description>
        KumuluzEE Security extension for the Kumuluz EE microservice framework.
    </description>

    <url>https://ee.kumuluz.com</url>

    <properties>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <kumuluzee.version>4.1.0</kumuluzee.version>

        <nexus.staging.plugin.version>1.6.8</nexus.staging.plugin.version>
        <gpg.plugin.version>1.6</gpg.plugin.version>
    </properties>

    <scm>
        <connection>scm:git:git@github.com:kumuluz/kumuluzee-security.git</connection>
        <developerConnection>scm:git:git@github.com:kumuluz/kumuluzee-security.git</developerConnection>
        <url>git@github.com:kumuluz/kumuluzee-security.git</url>
    </scm>

    <issueManagement>
        <system>GitHub Issues</system>
        <url>https://github.com/kumuluz/kumuluzee-security/issues</url>
    </issueManagement>

    <developers>
        <developer>
            <name>Tilen Faganel</name>
            <id>tfaga</id>
            <email>tilen.faganel@me.com</email>
            <url>https://github.com/TFaga</url>
        </developer>
        <developer>
            <name>Benjamin Kastelic</name>
            <id>osbeorn</id>
            <email>kastelic.benjamin@gmail.com</email>
            <url>https://github.com/osbeorn</url>
        </developer>
        <developer>
            <name>Miha Jamsek</name>
            <id>Jamsek-m</id>
            <url>https://github.com/Jamsek-m</url>
        </developer>
    </developers>

    <licenses>
        <license>
            <name>MIT License</name>
            <url>http://www.opensource.org/licenses/mit-license.php</url>
        </license>
    </licenses>

    <distributionManagement>
        <snapshotRepository>
            <id>ossrh</id>
            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
        </snapshotRepository>
    </distributionManagement>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.kumuluz.ee</groupId>
                <artifactId>kumuluzee-bom</artifactId>
                <version>${kumuluzee.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <dependency>
                <groupId>com.kumuluz.ee.security</groupId>
                <artifactId>kumuluzee-security-common</artifactId>
                <version>${project.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>org.sonatype.plugins</groupId>
                <artifactId>nexus-staging-maven-plugin</artifactId>
                <version>${nexus.staging.plugin.version}</version>
                <extensions>true</extensions>
                <configuration>
                    <serverId>ossrh</serverId>
                    <nexusUrl>https://oss.sonatype.org/</nexusUrl>
                    <autoReleaseAfterClose>true</autoReleaseAfterClose>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>deploy</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-gpg-plugin</artifactId>
                        <version>${gpg.plugin.version}</version>
                        <executions>
                            <execution>
                                <id>sign-artifacts</id>
                                <phase>verify</phase>
                                <goals>
                                    <goal>sign</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

</project>